REG-407 trying alternative solution

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
@@ -42,10 +42,9 @@ a
     color: $tomitribe-orange
     text-decoration: underline
 
-span.mandatory
-  vertical-align: super !important
-  font-size: 10px !important
-  color: #ff0000 !important
+span.empty.mandatory
+  border: dashed 1px #ff0000
+  padding: 1px 2px
 
 [x-ng-click], [ng-click]
   &:hover
