REG-413 Ambiguos meaning of "API VERSION" on the Endpoint detail. - Rename "API Version" to "Endpoint Version"

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
@@ -3,7 +3,7 @@ div
   div
     div
       div(data-submenu="true", app-endpoints-details-toc-anchor="API Version")
-        span API Version
+        span Endpoint Version
         div(data-tribe-text,
             data-on-edit-mode-on="onEditModeOn(uniqueId)",
             data-on-edit-mode-off="onEditModeOff(uniqueId)",
