REG-407 superscript mandatory indicator

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details.sass
@@ -69,6 +69,12 @@ div[data-app-application-details]
       h1, h1 input, h1 span
         font-size: 25px !important
         font-weight: $app-font-weight-h1 !important
+        &.mandatory
+          vertical-align: super !important
+          font-size: 9px !important
+          margin-left: 2px
+          align-self: flex-start
+
       h2
         font-size: 18px !important
         font-weight: $app-font-weight-h2 !important
