--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_text.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_text.jade
@@ -3,7 +3,8 @@ div(tabindex=0, x-ng-attr-title="{{mandatory && !value ? '' : title}}")
         .text
             input(type="{{type ? type : 'text'}}", x-ng-keyup="keyEntered($event);", x-ng-model="value")
             span(x-ng-if="value") {{value}}
-            span.empty(x-ng-show="!value || value.trim() === ''", x-ng-class="{mandatory: mandatory}") {{placeholder ? placeholder : Empty}}
+            span.empty(x-ng-if="!value") {{placeholder ? placeholder : Empty}}
+            span.empty.mandatory(x-ng-if="!value && mandatory") mandatory
         .edit-icon
             i.fa.fa-pencil
     div(data-tribe-field-actions,
@@ -13,4 +14,3 @@ div(tabindex=0, x-ng-attr-title="{{mandatory && !value ? '' : title}}")
         data-on-cancel="onCancel()",
         data-valid-value="valid")
     div(data-tribe-tip, data-message="{{regexTip}}", data-visible="(valid === false)")
-    div(data-tribe-tip, data-message="This is a mandatory field", data-visible="mandatory && (!value || value.trim() === '') && emptyHover")
