--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
@@ -34,6 +34,11 @@ div[data-app-endpoints-details-header]
             font-style: normal
             color: #000000
             font-size: 25px !important
+            &.mandatory
+              vertical-align: super !important
+              font-size: 9px !important
+              margin-left: 2px
+              align-self: flex-start
         div.value span, a, div[data-tribe-text] input, div[data-tribe-text] span
           font-size: 25px !important
           font-weight: 600 !important
@@ -54,6 +59,11 @@ div[data-app-endpoints-details-header]
             input
               margin: 12px 0
         div[data-tribe-text]
+          span.mandatory
+            vertical-align: super !important
+            font-size: 9px !important
+            margin-left: 2px
+            align-self: flex-start
           &.active
             input
               margin: 4px 0
