REG-363 multiselect transparency issue and single select issue

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect_selected.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect_selected.jade
@@ -2,7 +2,7 @@ div
   .text
     input(type="text", x-ng-keyup="keyEntered($event);", x-ng-model="inputText")
     span {{inputText}}
-    span.empty(x-ng-if="!inputText") {{placeholder !== null &&  placeholder !== undefined ? placeholder : 'Empty'}}
+    span.empty(x-ng-if="!inputText") {{placeholder !== null &&  placeholder !== undefined ? placeholder : ''}}
     span.empty.mandatory(x-ng-if="!inputText && mandatory") mandatory
   .edit-icon
     i.fa.fa-pencil
