--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
@@ -75,10 +75,12 @@ div.tribe-data-tribe-multiselect-available-body
     > div
       padding: 5px 8px
     .option
+      background-color: #ffffff
       &.selected, &:hover
           background-color: #f5f5f5
   .new-opt
     border-top: dashed $app-input-border-color 1px
+    background-color: #ffffff
     &.selected, &:hover
       background-color: #f5f5f5
     > span:first-of-type
