--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
@@ -76,6 +76,7 @@ div.tribe-data-tribe-singleselect-available-body
         background-color: #f5f5f5
   .new-opt
     border-top: dashed $app-input-border-color 1px
+    background-color: #ffffff
     &.selected, &:hover
       background-color: #f5f5f5
     > span:first-of-type
