REG-363 singleselect no match text

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect_available.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect_available.jade
@@ -8,5 +8,5 @@
         span(x-ng-if="newLabel") {{newLabel}}:
         span(x-ng-if="!newLabel") New:
         span {{inputText}}
-    .new-opt(x-ng-if="!newOpt && !editable && !selectedItem")
+    .new-opt(x-ng-if="!newOpt && !editable && !selectedItem && inputText")
         span No matches
