--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_header_create_btn.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_header_create_btn.sass
@@ -25,8 +25,9 @@ div[data-app-endpoints-header-create-btn]
         margin-left: 10px
   .create-endpoint-btn
     position: relative
-    &:hover
-      cursor: pointer
+    > div
+      &:hover
+        cursor: pointer
     .button-applications
       display: none
       &.visible
