--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
@@ -94,7 +94,7 @@ div[data-app-endpoints-details-header]
         font-size: $app-font-size-h2
         color: $text-color
     span.empty
-      color: lighten($app-placeholder-color, 50%)
+      color: $app-placeholder-color
       font-weight: 100 !important
       font-style: italic !important
 
