--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
@@ -13,6 +13,7 @@
         &.empty
           font-style: italic
           color: $app-placeholder-color !important
+          font-weight: 100 !important
       input
         margin: 5px 0
         border: 0
