--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
@@ -122,6 +122,7 @@ div[data-tribe-markdown]
     span
       font-style: italic
       color: $app-placeholder-color
+      font-weight: 100 !important
   div.preview > div[x-ng-bind-html], div.editor-preview
     max-width: 100%
     @include code-style
