REG-385 limit dropdown width

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect_available.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect_available.jade
@@ -1,4 +1,4 @@
-.tribe-data-tribe-multiselect-available-body.floating-menu
+.tribe-data-tribe-multiselect-available-body.floating-menu(x-ng-show="newOpt || (availableOptions && availableOptions.length > 0)")
     .opts
         .option(x-ng-repeat="opt in availableOptions | orderBy:getOptionText",
                 x-ng-click="selectItem(opt)",
