--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
@@ -33,9 +33,7 @@ div[data-tribe-multiselect-selected]
           border-width: 0
           padding: 0
           height: auto !important
-          &:focus
-            min-width: 10px
-            width: 100%
+
       > div.items
         display: inline-block
         border: solid #cccccc 1px
@@ -48,6 +46,12 @@ div[data-tribe-multiselect-selected]
             margin-right: 5px
           > i
             color: #707070
+
+div[data-tribe-multiselect]
+  &.active
+    input
+      min-width: 10px
+      width: 100%
 
 [data-tribe-multiselect]
   display: inline-block
@@ -69,6 +73,7 @@ div[data-tribe-multiselect-selected]
 
 div.tribe-data-tribe-multiselect-available-body
   min-width: 300px
+  max-width: 500px
   z-index: 4000
   .opts
     padding: 0
