--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
@@ -8,6 +8,9 @@
   line-height: 1.7
   font-size: $app-font-size
 
+input::-ms-clear
+  display: none
+
 h1, h2, h3, h4, h5, h6
   font-family: "open sans", "Montserrat", Helvetica, Arial, sans-serif
   *
