REG-385 limit dropdown width

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
@@ -65,6 +65,7 @@
 
 div.tribe-data-tribe-singleselect-available-body
   min-width: 300px
+  max-width: 500px
   z-index: 4000
   .opts
     padding: 0
