edit-mode-on/off was not working with sees list

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
@@ -19,8 +19,8 @@ div
     data-on-edit-mode-off="onEditModeOff(uniqueId)",
     data-value="endpoint.operation.description", data-placeholder="Description")
   div(data-app-endpoints-details-see, data-endpoint="endpoint",
-    data-on-edit-mode-on="onEditModeOn(uniqueId)",
-    data-on-edit-mode-off="onEditModeOff(uniqueId)")
+    data-on-edit-mode-on="onEditModeOn",
+    data-on-edit-mode-off="onEditModeOff")
   .resourceUrl(x-ng-if="resourceUrl")
     h2(app-endpoints-details-toc-anchor="Resource URL") Resource URL
     div
