--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_option.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_option.sass
@@ -45,3 +45,5 @@ i[data-tribe-editable-option]
   &.visible
     .value
       border-bottom-left-radius: 0
+.tribe_editable_option.options.floating-menu
+  background-color: #ffffff
