REG-385 multiselect not selecting text on blur

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect.jade
@@ -9,6 +9,7 @@ div(tabindex=0)
         data-on-change="fieldChanged()",
         data-selected-option="selectedOption",
         data-input-text="inputText"
+        data-add-item="addItem"
     )
     div(data-tribe-multiselect-available,
         data-active="optionsActivated",
