REG-426 new default values; set type as NA if placement is body;

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_parameters.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_parameters.sass
@@ -78,3 +78,9 @@ div[data-app-endpoints-details-parameters]
               &:last-of-type
                 > div
                   display: flex
+  span.not-applicable
+    font-style: italic
+    color: $app-placeholder-color !important
+    font-size: 9px !important
+    margin-left: 2px
+    align-self: flex-start
