REG-385 adjust multiselect inner textfield width; adjust spinner hover icon position

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
@@ -22,6 +22,9 @@ $width: 20px
   > div
     max-width: 100%
     overflow: hidden
+    padding: 10px 10px 10px 0
+    &:hover
+      padding: 10px 25px 10px 5px
     > span
       white-space: nowrap
       margin-left: 5px
@@ -41,6 +44,7 @@ $width: 20px
         -webkit-appearance: none
   &.edit
     > div
+      padding: 10px 25px 10px 5px
       > span
         display: none
       > input
